Anthropic is hopelessly WORTHLESS. The sum total of all AI are simply NEVER going to make us smarter, because they are making us dumber faster than we are getting smarter.

--- a/FOSS/4.md
+++ b/FOSS/4.md
@@ -133,9 +133,9 @@ Kierkegaard nailed it: "**anxiety is the dizziness of freedom**." Paul cut throu
 
 Prayer isn't one-dimensional. It's a multi-pathway intervention hitting anxiety from all sides at once. Modern research reveals it [reshapes attention](https://www.tandfonline.com/doi/abs/10.1080/17470919.2016.1257437), [regulates emotions](https://www.sciencedirect.com/science/article/abs/pii/S0010945217303209), [creates meaning](https://link.springer.com/article/10.1007/s10943-015-0026-5), and [calms physiology](https://www.ncbi.nlm.nih.gov/pmc/articles/PMC2802370/) simultaneously.
 
-Brain scans tell the story: consistent prayer [activates the prefrontal cortex](https://www.tandfonline.com/doi/abs/10.1080/13674676.2019.1606783) while [quieting the amygdala's alarm system](https://www.sciencedirect.com/science/article/abs/pii/S0304394010015788). The [anterior cingulate lights up](https://www.sciencedirect.com/science/article/abs/pii/S1053811917305669), enhancing emotional control. This isn't just distraction—it's [rewiring resilience pathways](https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3968360/).
+Brain scans using [fMRI](https://www.nibib.nih.gov/science-education/science-topics/magnetic-resonance-imaging-mri), [EEG](https://www.hopkinsmedicine.org/health/treatment-tests-and-therapies/electroencephalogram-eeg), and [PET scans](https://www.mayoclinic.org/tests-procedures/pet-scan/about/pac-20385078) tell the story: consistent disciplined, earnest prayer [activates the prefrontal cortex](https://www.tandfonline.com/doi/abs/10.1080/13674676.2019.1606783) while [quieting the amygdala's alarm system](https://www.sciencedirect.com/science/article/abs/pii/S0304394010015788). The [anterior cingulate lights up](https://www.sciencedirect.com/science/article/abs/pii/S1053811917305669), enhancing emotional control. This isn't just about some activity distracting a person from the root cause of worry and anxiety — it's [the brain rewiring it's pathways of new levels of resilience](https://www.connectedpapers.com/main/05b2e5896df4af15d10497a854f79e4727a4b0cd/Review-of-the-Neural-Oscillations-Underlying-Meditation/graph). Of course, our best research suggests distinct differences in neural oscillatory activity among different focused attention (FA), open-monitoring (OM), as well as transcendental meditation (TM), and loving-kindness (LK) as  well as different prayer practices over time, but long-term diligent discipline is where the more measureable results show up in neurophysiological changes. Further characterizing these oscillatory changes will better elucidate the cognitive and therapeutic effects of specific prayer and meditation practices, and potentially even lead to the development of novel neuromodulation targets to take advantage of their benefits.
 
-The emerging field of [neurotheology](https://www.tandfonline.com/doi/abs/10.1080/13674676.2014.953265) confirms prayer isn't merely psychological coping—it's whole-brain engagement plus authentic spiritual connection. Bottom line? Don't just tell someone to "pray more" or "have more faith." That's like telling someone with pneumonia to "breathe better." The prayer-anxiety relationship has depth that pop spirituality misses entirely.
+The emerging multidisciplinary field of [neurotheology](https://biologos.org/articles/neurotheology-making-sense-of-the-brain-and-religious-experiences) confirms prayer isn't merely psychological coping—it's whole-brain engagement plus authentic spiritual connection. Bottom line? Don't just tell someone to "pray more" or "have more faith." That's like telling someone with pneumonia to "breathe better." The prayer-anxiety relationship has depth that pop spirituality or the high priests of scientism miss entirely. Religious experiences are providing measurable insights into the nature of consciousness. They may also shed light on the intricate relationship between the brain and the mind.
 
 ### Module 3: **Biblical Theology of Prayer and Worry**
 
@@ -147,7 +147,7 @@ Paul didn't mess around either. His [formula in Philippians 4:6-7](https://www.b
 
 Brain scans don't lie. [Prayer activates the prefrontal cortex](https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4000465/) while quieting the amygdala's fear circuit. That biblical emphasis on divine care? It [transforms threats into manageable challenges](https://www.apa.org/pubs/journals/releases/rel-16-4-378.pdf). God as both beyond us and beside us creates a [unique context for meaning-making](https://journals.sagepub.com/doi/10.1177/0956797610391987) that secular approaches can't touch.
 
-This isn't just spiritual talk. It's where scripture, psychology, and neuroscience meet—a three-dimensional framework that works when practiced in [communities that value authentic engagement](https://www.tandfonline.com/doi/abs/10.1080/13674676.2020.1832450) over empty ritual. No wonder anxiety melts when we pray like the Bible teaches.
+This isn't just spiritual talk. Focused, intense prayer is where scripture, psychology, and neuroscience meet—a three-dimensional framework that works when practiced regularly in [**communities** that value authentic **engagement**](https://www.tandfonline.com/doi/full/10.1080/2153599X.2024.2349778#d1e152) over empty ritual. No wonder anxiety melts when we pray like the Bible teaches.
 
 ### Module 4: Neuroscience of Prayer and Spiritual Practices
 
